--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,13 +7,70 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Hello World!"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+    <LinearLayout
+        android:layout_width="413dp"
+        android:layout_height="731dp"
+        android:orientation="vertical">
+
+        <TextView
+            android:id="@+id/textView5"
+            android:layout_width="411dp"
+            android:layout_height="51dp"
+            android:background="#009688"
+            android:fontFamily="sans-serif-light"
+            android:text="Lab2-AppsIoT"
+            android:textAlignment="center"
+            android:textColor="#F6EDED"
+            android:textSize="34sp" />
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:fontFamily="monospace"
+            android:text="BIENVENIDO"
+            android:textAlignment="center"
+            android:textColor="#1A719F"
+            android:textSize="34sp"
+            android:textStyle="bold" />
+
+        <ImageView
+            android:id="@+id/imageView2"
+            android:layout_width="match_parent"
+            android:layout_height="393dp"
+            app:srcCompat="@mipmap/ic_profe_foreground" />
+
+        <TextView
+            android:id="@+id/telemath"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:fontFamily="sans-serif-medium"
+            android:text="TeleMath"
+            android:textAlignment="center"
+            android:textColor="#009688"
+            android:textSize="34sp"
+            android:textStyle="bold" />
+
+        <Button
+            android:id="@+id/calcularboton"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:backgroundTint="#7CC17F"
+            android:insetLeft="50dp"
+            android:insetRight="50dp"
+            android:onClick="calcular"
+            android:text="Calcular" />
+
+        <Button
+            android:id="@+id/indicadoresboton"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:backgroundTint="#7CC17F"
+            android:insetLeft="50dp"
+            android:insetRight="50dp"
+            android:text="Indicadores"
+            android:onClick="indicadores"
+            android:textAlignment="center" />
+
+    </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
