--- a/app/src/main/res/layout/activity_main2.xml
+++ b/app/src/main/res/layout/activity_main2.xml
@@ -26,6 +26,15 @@
             app:flow_horizontalAlign="center"
             app:flow_verticalAlign="center" />
 
+        <ImageButton
+            android:id="@+id/retroceder1"
+            android:layout_width="80dp"
+            android:layout_height="wrap_content"
+            android:backgroundTint="#03FFFFFF"
+            android:translationY="-80dp"
+            android:onClick="retroceder1"
+            app:srcCompat="?attr/actionModeCloseDrawable" />
+
         <TextView
             android:id="@+id/textView2"
             android:layout_width="match_parent"
