--- a/app/src/main/res/layout/activity_main4.xml
+++ b/app/src/main/res/layout/activity_main4.xml
@@ -21,6 +21,15 @@
             android:textColor="#FFFFFF"
             android:textSize="34sp" />
 
+        <ImageButton
+            android:id="@+id/retroceder3"
+            android:layout_width="96dp"
+            android:layout_height="wrap_content"
+            android:backgroundTint="#00FFFFFF"
+            android:translationY="-50dp"
+            android:onClick="retroceder3"
+            app:srcCompat="?attr/actionModeCloseDrawable" />
+
         <TextView
             android:id="@+id/textView3"
             android:layout_width="wrap_content"
