--- a/app/src/main/res/layout/activity_main3.xml
+++ b/app/src/main/res/layout/activity_main3.xml
@@ -40,21 +40,21 @@
             app:srcCompat="?attr/actionModeCloseDrawable" />
 
         <EditText
-            android:id="@+id/editTextText"
+            android:id="@+id/editA"
             android:layout_width="89dp"
             android:layout_height="41dp"
             android:ems="10"
-            android:inputType="text"
-            android:text="0"
+            android:inputType="number"
+            android:hint="0"
             android:translationX="300dp" />
 
         <EditText
-            android:id="@+id/editTextText2"
+            android:id="@+id/editB"
             android:layout_width="90dp"
             android:layout_height="43dp"
             android:ems="10"
-            android:inputType="text"
-            android:text="0"
+            android:inputType="number"
+            android:hint="0"
             android:translationX="300dp"
             android:translationY="30dp" />
 
@@ -202,6 +202,7 @@
                     android:layout_height="54dp"
                     android:background="#8E8686"
                     android:text="="
+                    android:onClick="botonigual"
                     android:textSize="14sp"
                     android:translationX="30dp" />
 
